--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
     <!-- Site Header -->
     <header>
-        <img id="logo" src="file:///C:/Users/User/Documents/Corso%20Boolean/Repositories/html-css-booleaner/img/logo.svg" alt="">        
+        <img id="logo" src="file:///C:/Users/User/Documents/Corso%20Boolean/Repositories/html-css-booleaner/img/logo.svg" alt="">      
     </header>
     <!-- /Site Header -->
 
     <!-- Site Main -->
-    <main></main>
+    <main>
+
+    </main>
     <!-- /Site Main -->
 
     <!-- Site Footer -->
