--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <!-- Sezione 1 -->
         <section>
-            <h1 id="Title">Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee</h1> 
+            <h1>Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee</h1> 
             <h3 class="firma">Scritto da <span id="X">The Booleaner</span> <br> il 10/10/2020</h3>
             <img src="img/tim-1.jpg" alt="">
             <img src="img/tim-2.jpg" alt="">
